@@ -1,15 +1,14 @@
+// Trong file: guardmanagement/service/ShiftService.java
 package com.lytran.guardmanagement.service;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
 import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Autowired; // Cần cho hàm random cũ (nếu còn dùng)
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,43 +16,39 @@ import com.lytran.guardmanagement.dto.GuardDTO;
 import com.lytran.guardmanagement.dto.ShiftDTO;
 import com.lytran.guardmanagement.dto.ShiftRequest;
 import com.lytran.guardmanagement.entity.Guard;
+import com.lytran.guardmanagement.entity.Location;
 import com.lytran.guardmanagement.entity.Manager;
+import com.lytran.guardmanagement.entity.TimeSlot;
 import com.lytran.guardmanagement.model.LeaveStatus;
-import com.lytran.guardmanagement.model.Location;
 import com.lytran.guardmanagement.model.Shift;
-import com.lytran.guardmanagement.model.TimeSlot;
 import com.lytran.guardmanagement.repository.GuardRepository;
 import com.lytran.guardmanagement.repository.LeaveRequestRepository;
+import com.lytran.guardmanagement.repository.LocationRepository;
 import com.lytran.guardmanagement.repository.ManagerRepository;
 import com.lytran.guardmanagement.repository.ShiftRepository;
+import com.lytran.guardmanagement.repository.TimeSlotRepository;
 
 @Service
 public class ShiftService {
+    @Autowired
+    private ShiftRepository shiftRepository;
 
     @Autowired
-    private final ShiftRepository shiftRepository;
+    private GuardRepository guardRepository;
 
     @Autowired
-    private final GuardRepository guardRepository;
-
-    @Autowired
-    private final ManagerRepository managerRepository;
+    private ManagerRepository managerRepository;
 
     @Autowired
     private LeaveRequestRepository leaveRequestRepository;
 
-    public ShiftService(ShiftRepository shiftRepository, GuardRepository guardRepository,
-            ManagerRepository managerRepository) {
-        this.shiftRepository = shiftRepository;
-        this.guardRepository = guardRepository;
-        this.managerRepository = managerRepository;
-    }
+    @Autowired
+    private LocationRepository locationRepository;
+    
+    @Autowired
+    private TimeSlotRepository timeSlotRepository;
 
     private static final LocalDate ROTATION_ANCHOR_DATE = LocalDate.of(2024, 1, 1);
-
-    private static final List<TimeSlot> TIME_SLOTS = Arrays.asList(TimeSlot.DAY_SHIFT, TimeSlot.NIGHT_SHIFT);
-    private static final List<Location> ALL_LOCATIONS = Arrays.asList(Location.values());
-    private static final int NUM_LOCATIONS = ALL_LOCATIONS.size();
 
     @Transactional
     public void generateWeekForTeam(String team, LocalDate weekStartDate, String managerUsername) {
@@ -63,16 +58,13 @@ public class ShiftService {
         if (weekStartDate.getDayOfWeek() != DayOfWeek.MONDAY) {
             throw new IllegalArgumentException("Week start date must be a Monday.");
         }
-
         List<Guard> guardsInTeam = guardRepository.findByTeam(team);
         if (guardsInTeam.isEmpty()) {
             System.out.println("No guards found for team " + team + ". No schedules generated.");
             return;
         }
-
         Manager manager = managerRepository.findByUsername(managerUsername)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy quản lý."));
-
         List<String> errors = new ArrayList<>();
         for (Guard guard : guardsInTeam) {
             try {
@@ -83,7 +75,6 @@ public class ShiftService {
                 errors.add(errorMsg);
             }
         }
-
         if (!errors.isEmpty()) {
             System.err.println("Completed generation for team " + team + " with " + errors.size() + " errors.");
         }
@@ -93,17 +84,13 @@ public class ShiftService {
         if (weekStartDate.getDayOfWeek() != DayOfWeek.MONDAY) {
             throw new IllegalArgumentException("Ngày đầu tiên trong tuần phải là thứ 2.");
         }
-
         Guard guard = guardRepository.findById(guardId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên."));
-
         Manager manager = managerRepository.findByUsername(managerUsername)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy quản lý."));
-
         if (guard.getTeam() == null || guard.getRotaGroup() == null) {
             throw new IllegalArgumentException("Nhân viên này chưa được gán đội hoặc nhóm xoay ca.");
         }
-
         LocalDate weekEndDate = weekStartDate.plusDays(6);
         boolean alreadyAssigned = shiftRepository.existsByGuardIdAndShiftDateBetween(guardId, weekStartDate, weekEndDate);
         if (alreadyAssigned) {
@@ -112,28 +99,27 @@ public class ShiftService {
         }
 
         TimeSlot weekTimeSlot = getRotationTimeSlotForTeam(guard.getTeam(), weekStartDate);
-
         List<Shift> newShifts = new ArrayList<>();
+        List<Location> allLocations = locationRepository.findAll();
+        int numLocations = allLocations.size();
+        if (numLocations == 0) {
+            throw new RuntimeException("Không có Locations trong DB!");
+        }
 
         for (int i = 0; i < 7; i++) {
             LocalDate shiftDate = weekStartDate.plusDays(i);
-
             if (isSundayOffForRotation(guard, shiftDate)) {
                 continue;
             }
-
             Shift shift = new Shift();
             shift.setGuard(guard);
             shift.setManager(manager);
             shift.setShiftDate(shiftDate);
-
-            Location dailyLocation = findLocationForGuardOnDate(guard, shiftDate, weekTimeSlot);
+            Location dailyLocation = findLocationForGuardOnDate(guard, shiftDate, weekTimeSlot, allLocations, numLocations);
             shift.setLocation(dailyLocation);
-
             shift.setTimeSlot(weekTimeSlot);
             newShifts.add(shift);
         }
-
         shiftRepository.saveAll(newShifts);
     }
 
@@ -141,11 +127,9 @@ public class ShiftService {
         if (date.getDayOfWeek() != DayOfWeek.SUNDAY) {
             return false;
         }
-
         long daysSinceAnchor = java.time.temporal.ChronoUnit.DAYS.between(ROTATION_ANCHOR_DATE, date);
         int weekNumber = (int) (daysSinceAnchor / 7);
         int cyclePosition = weekNumber % 4;
-
         int guardGroup = guard.getRotaGroup();
         if (cyclePosition == 1 && (guardGroup == 1 || guardGroup == 2)) {
             return true;
@@ -164,101 +148,51 @@ public class ShiftService {
         long daysSinceAnchor = java.time.temporal.ChronoUnit.DAYS.between(ROTATION_ANCHOR_DATE, date);
         int weekNumber = (int) (daysSinceAnchor / 7);
         int cyclePosition = weekNumber % 4;
-
         boolean isTeamADay = (cyclePosition == 0 || cyclePosition == 1);
-
+        String timeSlotName;
         if (team.equals("A")) {
-            return isTeamADay ? TimeSlot.DAY_SHIFT : TimeSlot.NIGHT_SHIFT;
+            timeSlotName = isTeamADay ? "DAY_SHIFT" : "NIGHT_SHIFT";
         } else {
-            return isTeamADay ? TimeSlot.NIGHT_SHIFT : TimeSlot.DAY_SHIFT;
+            timeSlotName = isTeamADay ? "NIGHT_SHIFT" : "DAY_SHIFT";
         }
+        return timeSlotRepository.findByName(timeSlotName)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy TimeSlot với tên: " + timeSlotName));
     }
 
-    private Location findLocationForGuardOnDate(Guard guard, LocalDate date, TimeSlot timeSlot) {
+    private Location findLocationForGuardOnDate(Guard guard, LocalDate date, TimeSlot timeSlot, List<Location> allLocations, int numLocations) {
         int dayIndex = date.getDayOfWeek().getValue() - 1;
         int guardOffset = guard.getRotaGroup() - 1;
-
-        for (int i = 0; i < NUM_LOCATIONS; i++) {
-            int locationIndex = (dayIndex + guardOffset + i) % NUM_LOCATIONS;
-            Location potentialLocation = ALL_LOCATIONS.get(locationIndex);
-
+        for (int i = 0; i < numLocations; i++) {
+            int locationIndex = (dayIndex + guardOffset + i) % numLocations;
+            Location potentialLocation = allLocations.get(locationIndex);
             boolean taken = shiftRepository.existsByShiftDateAndTimeSlotAndLocation(date, timeSlot, potentialLocation);
-
             if (!taken) {
                 return potentialLocation;
             }
         }
-
-        throw new RuntimeException("Không còn khu vực trống cho: " + date + " " + timeSlot);
+        throw new RuntimeException("Không còn khu vực trống cho: " + date + " " + timeSlot.getName());
     }
 
     private ShiftDTO convertToDTO(Shift shift) {
         ShiftDTO dto = new ShiftDTO();
         dto.setId(shift.getId());
         dto.setShiftDate(shift.getShiftDate());
-
         if (shift.getTimeSlot() != null) {
-            dto.setTimeSlot(shift.getTimeSlot().name());
+            dto.setTimeSlot(shift.getTimeSlot().getName());
         }
-
         if (shift.getLocation() != null) {
-            dto.setLocation(shift.getLocation().name());
+            dto.setLocation(shift.getLocation().getName());
         }
-
         if (shift.getGuard() != null) {
             dto.setGuardId(shift.getGuard().getId());
             dto.setGuardName(shift.getGuard().getFullName());
             dto.setGuardIdentityNumber(shift.getGuard().getIdentityNumber());
         }
-
         return dto;
     }
 
     public Shift createShiftByManager(ShiftRequest request, String managerUsername) {
-        if (request.getShiftDate() == null) {
-            throw new IllegalArgumentException("Thiếu ngày làm việc.");
-        }
-
-        Manager manager = managerRepository.findByUsername(managerUsername)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy quản lý."));
-
-        if (request.getShiftDate().isBefore(LocalDate.now())) {
-            throw new IllegalArgumentException("Không thể tạo ca trực trong quá khứ.");
-        }
-
-        TimeSlot timeSlot = request.getTimeSlot();
-        Location location = request.getLocation();
-
-        if (timeSlot == null && location != null) {
-            timeSlot = getRandomFreeTimeSlot(request.getShiftDate());
-        } else if (timeSlot != null && location == null) {
-            location = getRandomFreelocation(request.getShiftDate(), timeSlot);
-        }
-
-        if (timeSlot == null || location == null) {
-            throw new IllegalArgumentException("Phải chọn ít nhất khung giờ hoặc khu vực.");
-        }
-
-        boolean taken = shiftRepository.existsByShiftDateAndTimeSlotAndLocation(request.getShiftDate(), timeSlot, location);
-        if (taken) {
-            throw new IllegalArgumentException("Ca trực này đã được chọn.");
-        }
-
-        Shift shift = new Shift();
-        shift.setManager(manager);
-        shift.setShiftDate(request.getShiftDate());
-        shift.setTimeSlot(timeSlot);
-        shift.setLocation(location);
-
-        return shiftRepository.save(shift);
-    }
-
-    public List<Shift> getShiftsBeforeToday(Long guardId) {
-        return shiftRepository.findByGuardIdAndShiftDateBefore(guardId, LocalDate.now());
-    }
-
-    public List<Shift> getAllShiftsForGuard(Long guardId) {
-        return shiftRepository.findByGuardId(guardId);
+        throw new UnsupportedOperationException("Tạo ca lẻ (createShiftByManager) không còn được hỗ trợ sau khi chuyển sang Entity.");
     }
 
     public Long getGuardIdByUsername(String username) {
@@ -267,55 +201,29 @@ public class ShiftService {
                 .getId();
     }
 
-    public TimeSlot getRandomFreeTimeSlot(LocalDate date) {
-        Random random = new Random();
-        for (int i = 0; i < 10; i++) {
-            TimeSlot slot = TIME_SLOTS.get(random.nextInt(TIME_SLOTS.size()));
-            boolean available = ALL_LOCATIONS.stream()
-                    .anyMatch(location -> !shiftRepository.existsByShiftDateAndTimeSlotAndLocation(date, slot, location));
-            if (available) {
-                return slot;
-            }
-        }
-        throw new RuntimeException("Không còn khung giờ trống.");
-    }
-
-    public Location getRandomFreelocation(LocalDate date, TimeSlot slot) {
-        Random random = new Random();
-        for (int i = 0; i < 10; i++) {
-            Location location = ALL_LOCATIONS.get(random.nextInt(ALL_LOCATIONS.size()));
-            boolean taken = shiftRepository.existsByShiftDateAndTimeSlotAndLocation(date, slot, location);
-            if (!taken) {
-                return location;
-            }
-        }
-        throw new RuntimeException("Không còn khu vực trống cho khung giờ đã chọn.");
-    }
-
     public List<ShiftDTO> getShiftsForGuardByDate(Long guardId, LocalDate date) {
         List<Shift> shifts = shiftRepository.findByGuardIdAndShiftDate(guardId, date);
         return shifts.stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<ShiftDTO> getShiftHistory(Long guardId) {
         return shiftRepository.findByGuardIdAndShiftDateBefore(guardId, LocalDate.now()).stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<ShiftDTO> getAllShifts(Long guardId) {
         return shiftRepository.findByGuardId(guardId).stream()
                 .filter(shift -> shift.getGuard() != null)
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Optional<ShiftDTO> getTodayAcceptedShift(Long guardId) {
         LocalDate today = LocalDate.now();
         List<Shift> shifts = shiftRepository.findByGuardIdAndShiftDate(guardId, today);
-
         return shifts.stream()
                 .filter(s -> s.getGuard() != null && s.getGuard().getId().equals(guardId))
                 .findFirst()
@@ -325,15 +233,16 @@ public class ShiftService {
     public void assignShiftToGuard(Long shiftId, Long guardId) {
         Shift shift = shiftRepository.findById(shiftId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy ca trực."));
-
         Guard guard = guardRepository.findById(guardId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên."));
 
-        boolean alreadyAssigned = shiftRepository.existsByGuardIdAndShiftDate(guardId, shift.getShiftDate());
-        if (alreadyAssigned) {
-            throw new RuntimeException("Nhân viên đã có ca trực vào ngày này.");
+        boolean hasOtherShift = shiftRepository.existsByGuardIdAndShiftDate(guardId, shift.getShiftDate());
+        boolean onLeave = leaveRequestRepository.existsByGuardIdAndStatusAndStartDateLessThanEqualAndEndDateGreaterThanEqual(
+                guardId, LeaveStatus.APPROVED, shift.getShiftDate(), shift.getShiftDate()
+        );
+        if (hasOtherShift || onLeave) {
+            throw new RuntimeException("Nhân viên đã có ca trực hoặc đang nghỉ phép vào ngày này.");
         }
-
         shift.setGuard(guard);
         shiftRepository.save(shift);
     }
@@ -348,7 +257,6 @@ public class ShiftService {
 
     public List<ShiftDTO> getShiftsForGuardInRange(Long guardId, LocalDate startDate, LocalDate endDate) {
         List<Shift> shifts = shiftRepository.findAllByGuardIdAndShiftDateBetween(guardId, startDate, endDate);
-        
         return shifts.stream()
                 .map(this::convertToDTO)
                 .collect(Collectors.toList());
@@ -356,18 +264,15 @@ public class ShiftService {
 
     public List<GuardDTO> getAvailableGuardsForShift(LocalDate shiftDate) {
         List<Guard> allGuards = guardRepository.findAll();
-
         List<GuardDTO> availableGuards = allGuards.stream()
                 .filter(guard -> {
                     boolean hasShift = shiftRepository.existsByGuardIdAndShiftDate(guard.getId(), shiftDate);
-
                     boolean onLeave = leaveRequestRepository.existsByGuardIdAndStatusAndStartDateLessThanEqualAndEndDateGreaterThanEqual(
                             guard.getId(),
                             LeaveStatus.APPROVED,
                             shiftDate,
                             shiftDate
                     );
-
                     return !hasShift && !onLeave;
                 })
                 .map(guard -> {
@@ -380,7 +285,6 @@ public class ShiftService {
                     return dto;
                 })
                 .collect(Collectors.toList());
-
         return availableGuards;
     }
 }
